--- a/ClientApp/src/app/Forms/User/change-password/change-password.component.html
+++ b/ClientApp/src/app/Forms/User/change-password/change-password.component.html
@@ -11,19 +11,19 @@
       <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
         <mat-form-field class="example-full-width" appearance="outline">
           <mat-label>Current Password</mat-label>
-            <input matInput autocomplete="off" placeholder="Current Password" formControlName="CurrentPassword" type="text">
+            <input matInput autocomplete="off" placeholder="Current Password" formControlName="CurrentPassword" type="password">
           </mat-form-field>
       </div>
       <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
         <mat-form-field class="example-full-width" appearance="outline">
           <mat-label>New Password</mat-label>
-            <input matInput autocomplete="off" placeholder="New Password" formControlName="NewPassword" type="text">
+            <input matInput autocomplete="off" placeholder="New Password" formControlName="NewPassword" type="password">
           </mat-form-field>
       </div>
       <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
         <mat-form-field class="example-full-width" appearance="outline">
           <mat-label>Confirm Password</mat-label>
-            <input matInput autocomplete="off" placeholder="Confirm Password" formControlName="ConfirmPassword" type="text">
+            <input matInput autocomplete="off" placeholder="Confirm Password" formControlName="ConfirmPassword" type="password">
           </mat-form-field>
       </div>
     </div>
