Updated UI of Script and contract master page

--- a/ClientApp/src/app/Forms/Imports/scripts/scripts.component.scss
+++ b/ClientApp/src/app/Forms/Imports/scripts/scripts.component.scss
@@ -1,7 +1,9 @@
-.script-main{
-    display: flex;
-    justify-content: flex-end;
-    .drop-box{
-        width: 50%;
+.script-main {
+    margin: 20px 0;
+    .drop-box {
+        width: 100%;
+        ngx-dropzone {
+            height: 240px;
+        }
     }
 }
