--- a/ClientApp/src/app/Forms/Imports/scripts/scripts.component.html
+++ b/ClientApp/src/app/Forms/Imports/scripts/scripts.component.html
@@ -1,14 +1,18 @@
-<div class="script-main">
-  <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-    <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>Exchange</mat-label>
-        <mat-select placeholder="" [(ngModel)]="selectedExId">
-            <mat-option *ngFor="let exchange of exchangeList" [value]="exchange.id">
-              {{exchange.name}}
-            </mat-option>
-        </mat-select>
-    </mat-form-field>
+<div class="row paret-form">
+  <div fxLayout="row" class="mt-2">
+    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+      <mat-form-field class="example-full-width" appearance="outline">
+          <mat-label>Exchange</mat-label>
+          <mat-select placeholder="" [(ngModel)]="selectedExId">
+              <mat-option *ngFor="let exchange of exchangeList" [value]="exchange.id">
+                {{exchange.name}}
+              </mat-option>
+          </mat-select>
+      </mat-form-field>
+    </div>
   </div>
+</div>
+<div class="script-main">
   <div class="drop-box">
     <ngx-dropzone (change)="onSelect($event)">
       <ngx-dropzone-label>Drop File here </ngx-dropzone-label>
@@ -17,8 +21,9 @@
       </ngx-dropzone-preview>
     </ngx-dropzone>
   </div>
-  
 </div>
-
-<button mat-raised-button color="primary" type="button" (click)="submit()">Save
-</button>
+<div class="text-end">
+  <button mat-raised-button color="primary" type="button" (click)="submit()">
+    Save
+  </button>
+</div>
