--- a/ClientApp/src/app/Forms/User/invite-user/invite-user.component.html
+++ b/ClientApp/src/app/Forms/User/invite-user/invite-user.component.html
@@ -47,7 +47,7 @@
             </mat-form-field>
           </div>
           <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50" class="pt-8 pl-10">
-            <mat-slide-toggle color="primary">Active</mat-slide-toggle>
+            <mat-slide-toggle formControlName="isActive" color="primary">Active</mat-slide-toggle>
           </div>
         </div>
     </div>
