--- a/ClientApp/src/app/Forms/Imports/scripts/scripts.component.html
+++ b/ClientApp/src/app/Forms/Imports/scripts/scripts.component.html
@@ -10,6 +10,9 @@
           </mat-select>
       </mat-form-field>
     </div>
+    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+      <mat-slide-toggle [(ngModel)]="lotFile" color="primary">Lot File</mat-slide-toggle>
+    </div>
   </div>
 </div>
 <div class="script-main">
