--- a/ClientApp/src/app/Forms/Imports/trade/trade.component.html
+++ b/ClientApp/src/app/Forms/Imports/trade/trade.component.html
@@ -1,1 +1,35 @@
-<p>trade works!</p>
+<div class="row paret-form">
+  <div fxLayout="row" class="mt-2">
+    <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
+      <mat-form-field class="example-full-width" appearance="outline">
+        <mat-label>Exchange</mat-label>
+        <mat-select placeholder="" [(ngModel)]="selectedExId">
+          <mat-option *ngFor="let exchange of exchangeList" [value]="exchange.id">
+            {{exchange.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+      <mat-slide-toggle [(ngModel)]="lotFile" color="primary">Lot File</mat-slide-toggle>
+    </div>
+  </div>
+</div>
+<div class="script-main">
+  <div class="drop-box">
+    <ngx-dropzone (change)="onSelect($event)">
+      <ngx-dropzone-label>Drop File here </ngx-dropzone-label>
+      <ngx-dropzone-preview *ngFor="let f of files" [multiple]='true' [removable]="true" (removed)="onRemove(f)">
+        <ngx-dropzone-label>{{ f.name }} ({{ f.type }})</ngx-dropzone-label>
+      </ngx-dropzone-preview>
+    </ngx-dropzone>
+    <div *ngIf="showError" class="error-message">
+      Only CSV files are allowed.
+    </div>
+  </div>
+</div>
+<div class="text-end">
+  <button mat-raised-button color="primary" type="button" (click)="submit()">
+    Save
+  </button>
+</div>
