--- a/ClientApp/src/app/Forms/Master/item/item.component.html
+++ b/ClientApp/src/app/Forms/Master/item/item.component.html
@@ -1,6 +1,9 @@
 
 <div class="row">
   <div fxLayout="row" class="mt-2 flex-end">
+    <button mat-raised-button color="primary" class="import-btn-item" (click)="importContractMaster()">
+      Import
+    </button>
     <button mat-raised-button color="primary" class="delete-slab icon-btn" >
       <mat-icon>
         <span class="material-icons-outlined">        
