--- a/ClientApp/src/app/Forms/Master/item/contract-dialog/contract-dialog.component.html
+++ b/ClientApp/src/app/Forms/Master/item/contract-dialog/contract-dialog.component.html
@@ -1,3 +1,9 @@
+<h2 class="heading">Import</h2>
+<a (click)="close()" class="close-btn">
+    <span class="material-symbols-outlined">
+      <mat-icon>close</mat-icon>
+    </span>
+</a>
 <div style="padding: 20px;" class="row paret-form">
     <div fxLayout="row" fxLayoutAlign="space-between" class="mt-2">
       <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
