--- a/ClientApp/src/styles.scss
+++ b/ClientApp/src/styles.scss
@@ -791,4 +791,29 @@ input {
     }
 }
 
+.loader-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Transparent background */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999; /* Ensure it's on top of other elements */
+  }
+  
+  .loader {
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite; /* Rotate the border */
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 //ag-row-no-focus ag-row ag-row-level-0 ag-row-position-absolute ag-row-last
