--- a/ClientApp/src/app/Forms/Entry/trade-contract/trade-contract.component.html
+++ b/ClientApp/src/app/Forms/Entry/trade-contract/trade-contract.component.html
@@ -3,7 +3,7 @@
         <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
             <div class="dropdown-container">
               <div class="dropdown-wrapper">
-                <mat-form-field appearance="outline" class="calendar">
+                <mat-form-field appearance="outline" class="calendar remove-bottom">
                   <mat-label>Contract Date</mat-label>
                   <input matInput [matDatepicker]="picker1" [(ngModel)]="conDate" (ngModelChange)="onCondateChange($event)">
                   <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
@@ -15,7 +15,7 @@
           <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
             <div class="dropdown-container">
                 <div class="dropdown-wrapper">
-            <mat-form-field class="example-full-width" appearance="outline">
+            <mat-form-field class="example-full-width remove-bottom" appearance="outline">
               <mat-label>Exchange </mat-label>
               <mat-select placeholder="Select Exchange" [(ngModel)]="exId" (ngModelChange)="onExchangeInputChange($event)">
                 <mat-option *ngFor="let exchange of exchangeList" [value]="exchange.id">
@@ -97,7 +97,7 @@
                         </div>
                       </div>
                       <div fxFlex="100" fxFlex.gt-sm="13" space-between fxFlex.sm="50">
-                        <button mat-raised-button color="primary" class="uppercase save-btn" [disabled]="!itemForm.valid || !conDate" type="submit">Save</button> 
+                        <button mat-raised-button color="primary" class="uppercase save-btn" [disabled]="!itemForm.valid || !conDate || isSaveButtonDisabled()" type="submit">Save</button> 
                         <button type="button" mat-raised-button color="warn" (click)="close()">Cancel</button>            
                     </div>
                 </div>
@@ -114,6 +114,7 @@
                          [rowData]="symbolMappingList"
                          [pagination]="true"
                          [columnDefs]="columnDefs"
+                         [rowMultiSelectWithClick]="true"
                          [rowSelection]="'multiple'"
                          (gridReady)="onGridReady($event)"
                          [defaultColDef]="agGridOptions.defaultColDef"
