--- a/ClientApp/src/app/Forms/Login/login.component.html
+++ b/ClientApp/src/app/Forms/Login/login.component.html
@@ -18,7 +18,7 @@
                             <!--<mat-error *ngIf="form.controls.UserId.hasError('invalidEmail')">Invalid UserId address</mat-error>-->
                         </mat-form-field>
                         <mat-form-field class="w-100">
-                            <input matInput placeholder="Password" formControlName="password">
+                            <input type="password" matInput placeholder="Password" formControlName="password">
                             <mat-error *ngIf="form.controls.password.errors?.required">Password is required</mat-error>
                             <mat-error *ngIf="form.controls.password.hasError('minlength')">Password isn't long enough, minimum of 6 characters</mat-error>
                         </mat-form-field> 
