--- a/ClientApp/src/app/theme/components/user-menu/user-menu.component.html
+++ b/ClientApp/src/app/theme/components/user-menu/user-menu.component.html
@@ -6,32 +6,24 @@
     <!--<span (mouseleave)="userMenuTrigger.closeMenu()">-->
         <mat-toolbar color="primary">
             <div fxLayout="row" fxLayoutAlign="space-around center" class="user-info">
-                <img [src]="userImage" alt="user-image" width="80" class="rounded mat-elevation-z6">
-                <p>Emilio Verdines <br> <small>Web developer</small></p>
+                <mat-icon>person</mat-icon>
+                <p>{{userData.userName}}</p>
             </div>  
         </mat-toolbar>
         <a mat-menu-item routerLink="/profile/projects"> 
             <mat-icon>person</mat-icon>
             <span>Profile</span> 
         </a>
-        <a mat-menu-item routerLink="/profile/user-info"> 
-            <mat-icon>edit</mat-icon>
-            <span>Edit Profile</span> 
-        </a>
         <a mat-menu-item routerLink="settings"> 
             <mat-icon>settings</mat-icon>
             <span>Settings</span> 
-        </a>
-        <a mat-menu-item routerLink="/"> 
-            <mat-icon>lock</mat-icon>
-            <span>Lock screen</span> 
         </a>
         <a mat-menu-item routerLink="help"> 
             <mat-icon>help</mat-icon>
             <span>Help</span> 
         </a>
         <div class="divider"></div>
-        <a mat-menu-item routerLink="/login"> 
+        <a mat-menu-item (click)="onLogout()"> 
             <mat-icon>power_settings_new</mat-icon>
             <span>Log out</span> 
         </a>
