--- a/ClientApp/src/app/Forms/Entry/trade-contract/trade-contract.component.html
+++ b/ClientApp/src/app/Forms/Entry/trade-contract/trade-contract.component.html
@@ -119,6 +119,7 @@
                          (gridReady)="onGridReady($event)"
                          [defaultColDef]="agGridOptions.defaultColDef"
                          (cellClicked)="onGridClick($event)"
+                         (cellDoubleClicked)="onGridDoubleClick($event)"
                          headerHeight="34">
         </ag-grid-angular>
       </div>
