--- a/ClientApp/src/app/Forms/Imports/trade/trade.component.html
+++ b/ClientApp/src/app/Forms/Imports/trade/trade.component.html
@@ -27,7 +27,7 @@
   </div>
 </div>
 <div class="text-end">
-  <button mat-raised-button color="primary" type="button" (click)="submit()">
+  <button mat-raised-button [disabled]="!files.length || !selectedExId" color="primary" type="button" (click)="submit()">
     Save
   </button>
 </div>
