--- a/ClientApp/src/app/Forms/Master/company/company-dialog/add-company.component.html
+++ b/ClientApp/src/app/Forms/Master/company/company-dialog/add-company.component.html
@@ -22,12 +22,18 @@
                     <mat-error *ngIf="companyForm.controls.address.errors?.required">Address is required</mat-error>                
                 </mat-form-field> 
             </div>
-            <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
-                <mat-form-field appearance="outline">
-                    <mat-label>City</mat-label>
-                    <input matInput autocomplete="off" placeholder="city" formControlName="city" type="text">
-                    <mat-error *ngIf="companyForm.controls.city.errors?.required">City is required</mat-error>                
-                </mat-form-field>
+            <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="50">
+                <div class="dropdown-wrapper">
+                    <mat-form-field class="select-slab-mat" appearance="outline">
+                      <mat-label>Select City</mat-label>
+                      <mat-select #selectType placeholder="Select City" panelClass="custom-select-panel" formControlName="city">
+                        <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search City" (input)="onInputCityChange($event)" />
+                        <mat-option *ngFor="let option of filteredCityNameList" [value]="option.id">
+                          {{ option.name }}
+                        </mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                </div>
             </div>
             <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="50">
                 <mat-form-field appearance="outline">
