--- a/ClientApp/src/app/Forms/Master/trade-file/trade-file.component.html
+++ b/ClientApp/src/app/Forms/Master/trade-file/trade-file.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div fxLayout="row" class="mt-2 flex-end symbol-mapping">
         <form [formGroup]="itemForm" (ngSubmit)="onSubmit(itemForm.value)" fxLayout="row wrap" class="user-form">
-            <div class="white-block pb-5">
+            <div class="white-block pb-5 user-form-child-div">
                 <div class="tab-party-details-parent">
                     <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="30">
                         <mat-form-field appearance="outline">
