--- a/ClientApp/src/app/Forms/Entry/trade-contract/trade-contract.component.scss
+++ b/ClientApp/src/app/Forms/Entry/trade-contract/trade-contract.component.scss
@@ -4,3 +4,16 @@
 .remove-bottom{
     margin-bottom: 0px !important;
 }
+
+.trade-form{
+   width: 100%;
+   .trade-form-div{
+    width: 100%;
+   }
+}
+
+.trade-number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
