--- a/ClientApp/src/app/Forms/Reports/trade-register/trade-register.component.html
+++ b/ClientApp/src/app/Forms/Reports/trade-register/trade-register.component.html
@@ -88,6 +88,7 @@
                          [columnDefs]="columnDefs"
                          [rowMultiSelectWithClick]="true"
                          [rowSelection]="'multiple'"
+                         [gridOptions]="gridOptions"
                          (gridReady)="onGridReady($event)"
                          [defaultColDef]="agGridOptions.defaultColDef"
                          (cellClicked)="onGridClick($event)"
