--- a/ClientApp/src/app/Forms/Reports/trade-register/trade-register.component.html
+++ b/ClientApp/src/app/Forms/Reports/trade-register/trade-register.component.html
@@ -6,7 +6,7 @@
                           <div class="dropdown-wrapper">
                             <mat-form-field appearance="outline" class="calendar">
                               <mat-label>From</mat-label>
-                              <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt">
+                              <input matInput [matDatepicker]="picker1" [(ngModel)]="fromDt" (ngModelChange)="onFromDtChange()">
                               <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                               <mat-datepicker #picker1></mat-datepicker>
                             </mat-form-field>
@@ -71,9 +71,60 @@
                         </div>
                     </div>
                     </div>
-                      <div fxFlex="100" fxFlex.gt-sm="13" space-between fxFlex.sm="50">
-                        <button mat-raised-button color="primary" class="uppercase save-btn" (click)="getTradeFileListData()" type="submit">Search</button> 
+                    
+                </div>
+                <div class="tab-party-details-parent">
+                  <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+                    <div class="dropdown-container">
+                      <div class="dropdown-wrapper">
+                        <mat-form-field class="select-slab-mat" appearance="outline">
+                          <mat-label>Select Broker</mat-label>          
+                          <mat-select #selectBroker [(ngModel)]="brokerIds" multiple placeholder="Select Broker" panelClass="custom-select-panel">
+                            <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Broker" (input)="onInputBrokerListChange($event)"/>
+                            <mat-option value=-1 (click)="brokerAllSelection()">Select All</mat-option>
+                            <mat-option *ngFor="let option of filterBrokerList" [value]="option.id">
+                              {{ option.name }}
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
                     </div>
+                  </div>
+                  <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+                    <div class="dropdown-container">
+                      <div class="dropdown-wrapper">
+                        <mat-form-field class="select-slab-mat" appearance="outline">
+                          <mat-label>Select Instrument</mat-label>          
+                          <mat-select #selectInstrument [(ngModel)]="instrumentIds" multiple placeholder="Select Instrument" panelClass="custom-select-panel">
+                            <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Instrument" (input)="onInputInstrumentListChange($event)"/>
+                            <mat-option value=-1 (click)="instrumentAllSelection()">Select All</mat-option>
+                            <mat-option *ngFor="let option of filteredInstrumentList" [value]="option.id">
+                              {{ option.name }}
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                    </div>
+                  </div>
+                  <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15">
+                    <div class="dropdown-container">
+                      <div class="dropdown-wrapper">
+                        <mat-form-field class="select-slab-mat" appearance="outline">
+                          <mat-label>Select Maturity</mat-label>          
+                          <mat-select #selectMaturity [(ngModel)]="maturityIds" multiple placeholder="Select Maturity" panelClass="custom-select-panel">
+                            <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Maturity" (input)="onInputMaturityListChange($event)"/>
+                            <mat-option value=-1 (click)="maturityAllSelection()">Select All</mat-option>
+                            <mat-option *ngFor="let option of filteredMaturityList" [value]="option.maturity">
+                              {{ option.maturity }}
+                            </mat-option>
+                          </mat-select>
+                        </mat-form-field>
+                      </div>
+                    </div>
+                  </div>
+                    <div fxFlex="100" fxFlex.gt-sm="13" space-between fxFlex.sm="50">
+                      <button mat-raised-button color="primary" class="uppercase save-btn" (click)="getTradeFileListData()" type="submit">Search</button> 
+                  </div>
                 </div>
     </div>
     <div class="col-xl-12 mt-2 position-relative">
