--- a/ClientApp/src/app/Forms/User/user.component.html
+++ b/ClientApp/src/app/Forms/User/user.component.html
@@ -20,7 +20,7 @@
       </ag-grid-angular>
     </div>
   </mat-tab>
-  <mat-tab label="Roles">
+  <mat-tab label="Roles" (click)="getUserrolesList()">
     Roles
   </mat-tab>
 </mat-tab-group>
