--- a/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
+++ b/ClientApp/src/app/Forms/Entry/Voucher/voucher.component.html
@@ -1,132 +1,21 @@
-<form [formGroup]="voucherForm" (ngSubmit)="onSubmit()" class="pt-10"> 
-  <div class="flex-p">
-    <mat-card-content class="voucher-form">
-      <mat-expansion-panel>
-        <mat-expansion-panel-header>
-          <mat-panel-title>Voucher Entry <ng-container *ngIf="vouNo">
-            - {{vouNo}}
-          </ng-container></mat-panel-title>
-        </mat-expansion-panel-header>                    
-        <div class="dropdown-container">
-          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="20">
-            <div class="dropdown-wrapper">
-              <mat-form-field class="select-slab-mat" appearance="outline">
-                <mat-label>Vou Type</mat-label>  
-                <mat-select [disabled]="voucherForm.get('vouMasterId').value !== 0" #select formControlName="VouType" placeholder="Select VouType" (selectionChange)="getVoucherList()" panelClass="custom-select-panel">
-                  <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputVouTypeListChange($event)"/>
-                  <mat-option *ngFor="let option of filteredVouTypeList" [value]="option.id">
-                    {{ option.name }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-          </div>
-          <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="20">
-            <div class="dropdown-wrapper">
-              <mat-form-field appearance="outline" class="calendar">
-                <mat-label>VouDate</mat-label>
-                <input matInput [matDatepicker]="picker2" placeholder="Date" formControlName="VouDate" (ngModelChange)="getVoucherList()">
-                <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
-                <mat-datepicker #picker2></mat-datepicker>
-              </mat-form-field>
-            </div>
-          </div>
-          <div fxFlex="100" fxFlex.gt-sm="35" fxFlex.sm="35">
-            <div class="dropdown-wrapper" *ngIf="voucherForm.get('VouType').value !== 'JV'">
-              <mat-form-field class="select-slab-mat" appearance="outline">
-                <mat-label>Contra Account</mat-label>
-                <mat-select #select formControlName="ContraAc" placeholder="Select ContraAc" panelClass="custom-select-panel">
-                  <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)"/>
-                  <mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
-                    {{ option.name }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            </div>
-          </div>  
-          <div fxFlex="100" fxFlex.gt-sm="10" fxFlex.sm="10" class="pt-5 text-end">
-            <div *ngIf="totalAmount != 0 && voucherForm.get('VouType').value !== 'JV'">
-              <label [ngClass]="{ 'red-text': amountLabel === 'CR', 'green-text': amountLabel !== 'CR' }">{{ totalAmount }} {{ amountLabel }}</label>
-            </div>
-          </div>          
-          <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15" class="text-end">
-            <button mat-raised-button color="warn" class="uppercase" type="button" (click)="resetForm(voucherForm)">
-              <mat-icon>clear</mat-icon>
-            </button>
-            <button mat-raised-button color="primary" class="uppercase ml-7" [disabled]="!voucherForm.valid" type="submit">
-              <mat-icon>save</mat-icon>
-            </button>
-          </div>        
-        </div>
-        <div formArrayName="vouDetails">
-          <div *ngFor="let detail of vouDetails().controls; let detailIndex=index" class="mb-10">
-            <div [formGroupName]="detailIndex">
-              <div class="dropdown-container">
-                <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="20" class="dropdown-arrow">
-                  <mat-form-field class="select-slab-mat mb-0" appearance="outline">
-                    <mat-label>Account</mat-label>
-                    <mat-select #select formControlName="Account" placeholder="Select Account" panelClass="custom-select-panel">
-                      <input class="milti-search-box" #multiUserSearch type="text" autocomplete="off" matInput placeholder="Search Account" (input)="onInputAccountListChange($event)"/>
-                      <mat-option *ngFor="let option of filteredAccountList" [value]="option.id">
-                        {{ option.name }}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </div>      
-                <div fxFlex="100" fxFlex.gt-sm="20" fxFlex.sm="30">
-                  <mat-form-field appearance="outline" class="form-control">
-                    <mat-label>Amount</mat-label>
-                    <input matInput autocomplete="off" placeholder="Amount" formControlName="Amount" type="number">      
-                  </mat-form-field>
-                </div>      
-                <div fxFlex="100" fxFlex.gt-sm="10" fxFlex.sm="15" class="dropdown-arrow">
-                  <mat-form-field class="select-slab-mat mb-0" appearance="outline">
-                    <mat-label>DR/CR</mat-label>
-                    <mat-select #select formControlName="DRCR" placeholder="Select DRCR" panelClass="custom-select-panel">
-                      <mat-option [value]="DR">DR</mat-option>
-                      <mat-option [value]="CR">CR</mat-option>      
-                    </mat-select>
-                  </mat-form-field>
-                </div>      
-                <div fxFlex="100" fxFlex.gt-sm="35" fxFlex.sm="35">
-                  <mat-form-field appearance="outline" class="wider-width">
-                    <mat-label>Narration</mat-label>
-                    <input matInput autocomplete="off" placeholder="Narration" formControlName="Narration" type="text">      
-                  </mat-form-field>
-                </div>   
-                <div fxFlex="100" fxFlex.gt-sm="15" fxFlex.sm="15" class="text-end">                      
-                  <button mat-raised-button color="primary" type="button" (click)="addVouDetail()">
-                    <mat-icon>add</mat-icon>
-                  </button>  
-                  <span *ngIf="detailIndex<1" class="empty-div"></span>
-                  <button *ngIf="detailIndex>0" mat-raised-button color="warn" (click)="removeVouDetail(detailIndex)" class="ml-7">
-                    <mat-icon>delete</mat-icon>
-                  </button>
-                </div>                 
-              </div>              
-            </div>
-          </div>          
-        </div>
-      </mat-expansion-panel>
-    </mat-card-content>
-    <div class="col-xl-12 mt-2 position-relative">
-      <span class="material-symbols-outlined delete-icon" (click)="deleteVochers()">
-        <mat-icon>delete_sweep</mat-icon>
-      </span>
-      <ag-grid-angular style=" height: 480px;"
-                    class="ag-theme-material mt-2"
-                    [rowData]="vocherGridData"
-                    [pagination]="true"
-                    [rowHeight]="31"
-                    [columnDefs]="columnDefs"
-                    [rowSelection]="'multiple'"
-                    [rowMultiSelectWithClick]="true"
-                    [defaultColDef]="agGridOptions.defaultColDef"
-                    (gridReady)="onGridReady($event)"
-                    (cellClicked)="onGridClick($event)"
-                    headerHeight="34">
-      </ag-grid-angular>
-  </div>
-  </div>
-</form>
+<app-update-voucher (getGridVouList)="getVoucherList($event)" [vouType]="'voucher'" [editMasterId]="editMasterId" (onSaveAndClearFnCall)="onSaveAndClearFnCall()"></app-update-voucher>
+<div class="col-xl-12 mt-2 position-relative">
+  <span class="material-symbols-outlined delete-icon" (click)="deleteVochers()">
+    <mat-icon>delete_sweep</mat-icon>
+  </span>
+  <ag-grid-angular style=" height: 480px;"
+                class="ag-theme-material mt-2 entry-voucher"
+                [rowData]="vocherGridData"
+                [pagination]="true"
+                [rowHeight]="31"
+                [columnDefs]="columnDefs"
+                [rowSelection]="'multiple'"
+                [rowMultiSelectWithClick]="true"
+                [defaultColDef]="agGridOptions.defaultColDef"
+                (gridReady)="onGridReady($event)"
+                (cellClicked)="onGridClick($event)"
+                headerHeight="34">
+  </ag-grid-angular>
+</div>
+
 
