--- a/ClientApp/src/app/Forms/common/components/audit-logs/audit-logs.component.html
+++ b/ClientApp/src/app/Forms/common/components/audit-logs/audit-logs.component.html
@@ -16,6 +16,5 @@
   [rowHeight]="31"
   [columnDefs]="columnDefs"
   [defaultColDef]="agGridOptions.defaultColDef"
-  headerHeight="34"
->
+  headerHeight="34">
 </ag-grid-angular>
