--- a/ClientApp/src/app/Forms/Master/account/account.component.html
+++ b/ClientApp/src/app/Forms/Master/account/account.component.html
@@ -1,17 +1,24 @@
 
 <div class="row">
-  <div fxLayout="row" class="mt-2 flex-end">
-    <button mat-raised-button color="primary" class="delete-slab icon-btn"  (click)="onBtnExport()">
-      <mat-icon>
-        <span class="material-icons-outlined">        
-          file_download
-        </span>
-      </mat-icon> 
-      Export
-    </button>
-    <button mat-raised-button color="accent" (click)="openUserDialog(null)" class="icon-btn ml-15">
-      <mat-icon>add</mat-icon> Add Account
-    </button>
+  <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2 flex-end">
+    <div class="filter-control">
+      <mat-form-field appearance="outline">
+        <mat-label>Filter Search Result</mat-label>
+        <input matInput id="filter-text-box" placeholder="Filter Search Result" (input)="onFilteredChanged()"> 
+        <mat-icon class="search-ico">search</mat-icon>    
+      </mat-form-field>   
+    </div>
+    <div class="btn-block">
+      <button class="export-btn" (click)="downloadAsPDF()">
+        <img src="../../../../assets/img/pdf.png" alt="" />
+      </button>
+      <button class="export-btn ml-15" (click)="onBtnExport()">
+        <img src="../../../../assets/img/csv.png" alt="" />
+      </button>
+      <button mat-raised-button color="accent" (click)="openUserDialog(null)" class="icon-btn ml-15">
+        <mat-icon>add</mat-icon> Add Account
+      </button>
+    </div>
   </div>
   <div class="col-xl-12 mt-2">
     <ag-grid-angular style=" height: 520px;"
