Account Tax List

--- a/ClientApp/src/app/Forms/Master/exchange-tax-list/exchange-tax-list.component.html
+++ b/ClientApp/src/app/Forms/Master/exchange-tax-list/exchange-tax-list.component.html
@@ -1,4 +1,21 @@
 <div class="row">
+    <div fxLayout="row" fxLayoutAlign="space-between center" class="mt-2 flex-end">
+        <div class="filter-control">
+            <mat-form-field appearance="outline">
+                <mat-label>Filter Search Result</mat-label>
+                <input matInput id="filter-text-box" placeholder="Filter Search Result" (input)="onFilteredChanged()"> 
+                <mat-icon class="search-ico">search</mat-icon>    
+            </mat-form-field>   
+        </div>
+        <div class="btn-block">
+            <button class="export-btn" (click)="downloadAsPDF()">
+                <img src="../../../../assets/img/pdf.png" alt="" />
+            </button>
+            <button class="export-btn ml-15" (click)="onBtnExport()">
+                <img src="../../../../assets/img/csv.png" alt="" />
+            </button>
+        </div>
+    </div>
     <div class="col-xl-12 mt-2">
         <ag-grid-angular style=" height: 520px;"
             class="ag-theme-material"
